<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/textView_account_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginLeft="@dimen/margin24"
        android:text="@string/account_type_text"/>

    <Spinner
        android:id="@+id/accountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_account_privacy"
        android:layout_marginLeft="@dimen/margin24" />

    <TextView
        android:id="@+id/textView_max_distance"
        android:layout_width="@dimen/margin200"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountType"
        android:layout_marginLeft="@dimen/margin24"
        android:layout_marginTop="@dimen/margin24"
        android:text="@string/max_distance"/>

    <EditText
        android:id="@+id/editText_max_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginLeft="@dimen/margin24"
        android:text="10"
        android:layout_below="@+id/textView_max_distance"/>

    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_max_distance"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin24"
        android:text="@string/gender"/>

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_gender"
        />

    <TextView
        android:id="@+id/textView_looking_for_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin24"
        android:layout_below="@+id/spinner_gender"
        android:text="@string/gender"/>

    <Spinner
        android:id="@+id/spinner_looking_for_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_looking_for_gender" />


    <TextView
        android:id="@+id/textView_age_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin24"
        android:layout_below="@+id/spinner_looking_for_gender"
        android:text="@string/age"/>

    <EditText
        android:id="@+id/editText_min_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="18"
        android:layout_marginLeft="@dimen/margin24"
        android:layout_below="@+id/textView_age_range"
        android:autofillHints="18" />

    <TextView
        android:id="@+id/textView_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24"
        android:layout_alignBottom="@id/editText_min_age"
        android:layout_toEndOf="@id/editText_min_age"
        android:text="-"
        android:layout_marginHorizontal="@dimen/margin24"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <EditText
        android:id="@+id/editText_max_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="99"
        android:layout_marginLeft="@dimen/margin100"
        android:layout_below="@+id/textView_age_range"
        android:autofillHints="99" />

    <TextView
        android:id="@+id/textView_reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:layout_marginLeft="@dimen/margin24"
        android:layout_below="@+id/editText_max_age"
        />

    <TimePicker
        android:id="@+id/reminder_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numbersBackgroundColor="@color/colorAccent"
        android:adjustViewBounds="true"
        android:timePickerMode="spinner"
        android:layout_below="@+id/textView_reminder_time"
        android:layout_toEndOf="@id/textView_reminder_time"
        android:layout_marginHorizontal="@dimen/margin24"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <Button
        android:id="@+id/button_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_time_picker"
        android:text="@string/save" />
</RelativeLayout>
